--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Backend API module for Project #06 - Build a Secure API for a Review App of the OpenClassrooms' Web Developer path.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --verbose",
+    "test:unit": "jest --testNamePattern=UnitTesting",
+    "start": "node index.js",
+    "start-dev": "DEBUG=app:* nodemon index.js"
+  },
+  "engines": {
+    "node": "16.9.1"
   },
   "keywords": [
     "OpenClassrooms",
@@ -28,5 +34,8 @@
     "multer": "^1.4.5-lts.1",
     "winston": "^3.8.2",
     "winston-mongodb": "^5.1.1"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
