--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3"
   }
 }
